refactor: documentation swagger v2
